-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 9
-
Component/s: core-libs
-
b121
-
Not verified
As a follow up to JDK-8156521, and when comparing NetworkInterface.c against the version of the same file in jdk8-dev a few minor issues were noticed. As well as a few other small issues in the Networking native code.
- relates to
-
JDK-8156521 Minor fixes and cleanups in NetworkInterface.c
-
- Closed
-