8157811: Additional minor fixes and cleanups in Networking native code

Reviewed-by: alanb, clanger, dsamersoff, msheppar